corrected z-index issue

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 60px;
   background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  /* z-index: -1; */
+  z-index: -1;
   position: absolute;
   top: calc(475px - 60px);
 }
